--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,20 @@
+/.checkers
+/.rds_delta
+/.sdk_delta.info
+/.sign
+/.settings
+/crash-info/
+/res/res.xml
+/vlc/
 /Debug/
-/SA_Report/
-.sign/
-crash-info/
-.sdk_delta.info
-.rds_delta
-.package-stamp
 /Release/
+/lib/*.so*
+/lib/*.a
+/emotion/
+/libvlcpp/
+/medialibrary/
+*.tmp
+*~
+res/edje/*.edj
+.package-stamp
+.cproject
